--- a/Trabalho05/Conferencias/src/interfaces/StartFrame.form
+++ b/Trabalho05/Conferencias/src/interfaces/StartFrame.form
@@ -291,7 +291,7 @@
     </Component>
     <Component class="javax.swing.JButton" name="openAvaliaApresentador">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Avalia&#xe7;&#xe3;o Apresentador"/>
+        <Property name="text" type="java.lang.String" value="Pessoa x Auxilio"/>
         <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
           <Dimension value="[190, 30]"/>
         </Property>
